--- a/rdf-resource-resolver-core/pom.xml
+++ b/rdf-resource-resolver-core/pom.xml
@@ -28,7 +28,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.fairdevkit</groupId>
+        <groupId>com.github.fairdatateam</groupId>
         <artifactId>rdf-resource-resolver</artifactId>
         <version>0.1.2-SNAPSHOT</version>
     </parent>
