--- a/rdf-resource-resolver-api/pom.xml
+++ b/rdf-resource-resolver-api/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>com.github.fairdatateam</groupId>
         <artifactId>rdf-resource-resolver</artifactId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>rdf-resource-resolver-api</artifactId>
