--- a/rdf-resource-resolver-core/pom.xml
+++ b/rdf-resource-resolver-core/pom.xml
@@ -28,8 +28,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.fairdatateam</groupId>
-        <artifactId>rdf-resource-resolver</artifactId>
+        <groupId>${groupId}</groupId>
+        <artifactId>${artifactId}</artifactId>
         <version>${revision}</version>
     </parent>
 
@@ -38,7 +38,7 @@
     <dependencies>
         <!-- compile -->
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>rdf-resource-resolver-api</artifactId>
             <version>${project.version}</version>
         </dependency>
