--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,11 +23,17 @@ jobs:
         # using java 17 for now, to match original
         # todo: migrate to java 21 (LTS) 
         java-version: 17
-        distribution: 'temurin'  
+        distribution: 'temurin'
+        server-id: central
+        server-username: MAVEN_CENTRAL_USERNAME
+        server-password: MAVEN_CENTRAL_TOKEN
+        gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
     # https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#extra-setup-for-pomxml
-    - name: Build with Maven
-      run: mvn --batch-mode package --file pom.xml
-    - name: Publish to GitHub Packages Apache Maven
+    - name: Publish to Maven Central via Portal
       run: mvn deploy
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        # https://central.sonatype.org/publish/generate-portal-token/
+        MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
