--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -28,7 +28,7 @@ jobs:
         gpg-passphrase: MAVEN_GPG_PASSPHRASE
     # https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#extra-setup-for-pomxml
     - name: Publish to Maven Central via Portal
-      run: mvn deploy
+      run: mvn --batch-mode deploy
       env:
         # https://central.sonatype.org/publish/generate-portal-token/
         MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
