remove -SNAPSHOT from version and bump to 0.1.3dev0

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
         <artifactId>rdf-resource-resolver</artifactId>
         <!-- project version -->
         <!-- https://maven.apache.org/maven-ci-friendly.html#multi-module-setup -->
-        <revision>0.1.2-SNAPSHOT</revision>
+        <revision>0.1.3dev0</revision>
 
         <!-- project settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
