--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 
     <properties>
         <!-- DRY groupId (can be overridden by command line -DgroupId=... or env variable GROUP_ID) -->
-        <groupId>org.fairdatateam.rdf</groupId>
+        <groupId>io.github.dennisvang</groupId>
         <artifactId>rdf-resource-resolver</artifactId>
         <!-- project version -->
         <!-- https://maven.apache.org/maven-ci-friendly.html#multi-module-setup -->
