fix orphan groupid reference

--- a/rdf-resource-resolver-core/pom.xml
+++ b/rdf-resource-resolver-core/pom.xml
@@ -38,7 +38,7 @@
     <dependencies>
         <!-- compile -->
         <dependency>
-            <groupId>${groupId}</groupId>
+            <groupId>io.github.dennisvang</groupId>
             <artifactId>rdf-resource-resolver-api</artifactId>
             <version>${project.version}</version>
         </dependency>
