--- a/rdf-resource-resolver-core/pom.xml
+++ b/rdf-resource-resolver-core/pom.xml
@@ -28,7 +28,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.github.dennisvang</groupId>
+        <groupId>org.fairdatateam.rdf</groupId>
         <artifactId>rdf-resource-resolver</artifactId>
         <version>${revision}</version>
     </parent>
@@ -38,7 +38,7 @@
     <dependencies>
         <!-- compile -->
         <dependency>
-            <groupId>io.github.dennisvang</groupId>
+            <groupId>org.fairdatateam.rdf</groupId>
             <artifactId>rdf-resource-resolver-api</artifactId>
             <version>${project.version}</version>
         </dependency>
