--- a/rdf-resource-resolver-api/pom.xml
+++ b/rdf-resource-resolver-api/pom.xml
@@ -27,8 +27,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.fairdatateam.rdf</groupId>
+    <parent><!-- <groupId>org.fairdatateam.rdf</groupId> -->
+        <groupId>io.github.dennisvang</groupId>
         <artifactId>rdf-resource-resolver</artifactId>
         <version>${revision}</version>
     </parent>
